[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["ChaudhryBassamTanvir <chbassamtanvir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
sqlmodel = "^0.0.21"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
[tool.poetry.scripts]
dev = "todos.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
